تعديلات على الكلاسات وتحسينات في الكود